         snapshot.c,szx.c,z80.c: add support for DivIDE interface for szx
         snapshots (Fred).
20080522 sna.c: select the Pentagon 128 for 128k sna files (fixes bug #1958647)
         (Fred).
20080524 Makefile.am,configure.in,myglib/Makefile.am: don't use a libtool
         library as some operating systems (e.g. OpenSolaris) don't like the
         empty myglib.la we produce when glib proper is being used instead
         (Fred).
20080607 make-perl.c,myglib/{Makefile.am,garray.c}: add GArray replacement
	 code.
20080608 make-perl.c,myglib/ghash.c: add support functions for using
	 strings as hash table keys.
20080612 microdrive.c: don't refuse to load mdr files with bad checksums, the
         if1 ROM takes care of them (Gergely Szasz).
20080625 test/{Makefile.am,test.[ch],test15.c}: enable tests to be run if
         configured outside the top level directory.
20080625 test/{test.c,writeprotected.mdr}: add tests for bug #2002682: .mdr
	 code does not correctly handle write protect flag.
20080625 microdrive.c: fix write protect flag handling (fixes bug #2002682).
20080630 libspectrum.h.in: fix prototype for libspectrum_ide_alloc (Fred).
20080630 myglib/{garray.c,ghash.c}: add <string.h> to elimiate warnings (Fred).
20080630 rzx.c,sna.c: initialise error as it can be used unintialised (Fred).
20080701 csw.c,libspectrum.h.in,tap.c,tape.c,tape_block.[ch],tzx_read.c,
         tzx_write.c,warajevo_read.c,wav.c,z80em.c: various functions
         (notably tzx_write_bytes) could never fail but returned an error
         code anyway, which we faithfully checked through many levels of code.
         Stop doing this as it just makes the code less readable.
20080701 memory.c: allow calloc function to be changed.
20080717 make-perl.c,libspectrum.h.in: Win32: fix functions export for dll
	 (Marek).
20080821 sna.c: make 128Kb SNA files actually loadable again.
20080911 internals.h,libspectrum.{c,h.in},tape_block.c,test/test.c: add
	 function to get block length.