@@ -1,5 +1,5 @@
 /* tape_block.h: individual tape block types
-   Copyright (c) 2003-2007 Philip Kendall
+   Copyright (c) 2003-2008 Philip Kendall
 
    $Id$
 
@@ -419,6 +419,12 @@ libspectrum_tape_pure_data_next_bit( libspectrum_tape_pure_data_block *block,
 void
 libspectrum_tape_raw_data_next_bit( libspectrum_tape_raw_data_block *block,
                              libspectrum_tape_raw_data_block_state *state );
+libspectrum_error
+generalised_data_edge( libspectrum_tape_generalised_data_block *block,
+                       libspectrum_tape_generalised_data_block_state *state,
+		       libspectrum_dword *tstates, int *end_of_block,
+		       int *flags );
+
 
 #endif				/* #ifndef LIBSPECTRUM_TAPE_BLOCK_H */
 
